--- a/satzung.tex
+++ b/satzung.tex
@@ -112,7 +112,7 @@ Nutzungsbedingungen muß die aktuelle Fassung im Netz zugänglich sein.}
 \Satz{5}{Im Eingangsbereich des Roten Hauses, Christoph-Probst-Str. 6, 80805
 Mün\-chen, wird eine Anschlagtafel angebracht. Diese ist der offizielle
 Vereinsanzeiger. Zusätzlich werden die Mitteilungen unter der URL
-"`http://vereinsanzeiger.stusta.mhn.de/"' veröffentlicht.  Hat ein Mitglied
+"`http://vereinsanzeiger.stustanet.de/"' veröffentlicht.  Hat ein Mitglied
 keine Gelegenheit, den Vereinsanzeiger einzusehen, so kann er bis 1. April bzw.
 1. Oktober für das jeweils folgende Semester beim Vorstand schriftlich
 beantragen, auf dem Postweg zu den Versammlungen eingeladen zu werden.}
@@ -123,7 +123,8 @@ beantragen, auf dem Postweg zu den Versammlungen eingeladen zu werden.}
 
 \begin{Artikel}{6}{Mitglieder}
 
-\Satz{1}{Jeder Bewohner der Studentenstadt kann regelmäßig Mitglied werden. 
+\Satz{1}{Jeder Bewohner der Studentenstadt oder eines anderen vom Verein
+betreuten Studentenwohnheims kann regelmäßig Mitglied werden. 
 Die Aufnahme erfolgt auf schriftlichen Antrag an den Vorstand durch Ausstellung
 einer Mitgliedskarte. Eine Ablehnung ist schriftlich zu begründen.  Art. 10
 Abs. 3 ist anzuwenden.}
@@ -175,7 +176,10 @@ bleiben ihre Rechte und Pflichten als Mitglied unberührt.}
 \begin{Artikel}{10}{Ende der Mitgliedschaft}
 
 \Satz{1}{Die Mitgliedschaft ist grundsätzlich auf 4 Jahre befristet.
-Sie kann vom Vorstand auf Antrag um jeweils bis zu 4 Jahre verlängert werden.
+Sie endet jedoch immer erst zu dem Zeitpunkt, an dem der Vorstand das
+Mitglied aus der Mitgliederliste streicht.
+Die Mitgliedschaft kann vom Vorstand auf Antrag um jeweils bis zu 4 Jahre 
+verlängert werden.
 Bekleidet ein Mitglied ein Amt und würde seine Mitgliedschaft während seiner
 Amtszeit enden, so verlängert sie sich automatisch um ein weiteres Jahr.}
 
@@ -187,7 +191,8 @@ ein Vorstandsmitglied zu richten ist.
 \item durch Ausschluß aus dem Verein;
 \item durch Streichung aus der Mitgliederliste.
 \end{itemize}
-Bereits geleistete Semesterbeiträge werden anteilig zurückerstattet.}
+Bereits geleistete Semesterbeiträge werden anteilig zurückerstattet, wenn
+dieser Anteil 25 EUR übersteigt.}
 
 \Satz{3}{Ein Mitglied, das in erheblichem Maß gegen die Vereinsinteressen
 verstoßen hat, kann durch Beschluß des Vorstands aus dem Verein ausgeschlossen
@@ -208,6 +213,9 @@ bevorstehende Streichung der Mitgliedschaft hingewiesen werden.}
 
 \Satz{5}{Die Streichung erfolgt regelmäßig ebenfalls, wenn das Mitglied an der
 dem Verein zuletzt bekannt gegebenen Postanschrift keinen Wohnsitz mehr hat.}
+
+\Satz{6}{Die Streichung erfolgt außerdem regelmäßig, wenn die Mitgliedschaft
+abgelaufen ist und kein Verlängerung erfolgt ist.}
 
 \end{Artikel}
 
@@ -290,6 +298,10 @@ Kassenprüfungsausschusses
 \item Beschlußfassung über Satzungsänderungen und Vereinsauflösung
 \item Beschlußfassung über die Berufung eines Mitglieds gegen einen 
 Ausschluß durch den Vorstand
+\item Die Einteilung der Studentenstadt und anderer vom Verein betreuten
+Studentenwohnheime in Häuser
+\item Sie entscheidet, welche Studentenwohnheime neben der Studentenstadt
+vom Verein betreut werden.
 \end{itemize}}
 
 \Satz{3}{Sie kann eine Rahmengeschäftsordnung für alle Vereinsgremien, eine
@@ -311,7 +323,7 @@ ver\-öffent\-lichen.}
 \begin{Artikel}{16}{Einberufung}
 
 \Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jährlich,
-und zwar in den Zeiträumen 1. - 15. Juni und 1. - 15. Dezember, statt.}
+und zwar in den Zeiträumen 15. Mai - 15. Juni und 15. Novermber - 15. Dezember, statt.}
 
 \Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
 Mitgliedervollversammlung vom Vorstand durch Aushang im Vereinsanzeiger
@@ -342,6 +354,9 @@ erteilen.}
 Ausschlaggebend ist der Standort ihres Anschlusses. Im Zweifel entscheidet der
 Vorstand.}
 
+\Satz{4}{Mitglieder, die nicht in einem vom Verein betreuten Studentenwohnheim
+wohnen, gehören keinem Haus an.}
+
 \end{Artikel}
 
 \begin{Artikel}{18}{Zuständigkeit}
@@ -355,7 +370,7 @@ des Administratorenrates werden dabei von ihnen beachtet.}
 
 \begin{Artikel}{19}{Hausadministratoren}
 
-\Satz{1}{Jedes Haus hat einen Hausadministrator. Pro angefangene 30 Mitgliedern
+\Satz{1}{Jedes Haus hat einen Hausadministrator. Pro angefangene 20 Mitgliedern
 darf ein weiterer gewählt werden. Ausschlaggebend ist die Mitgliederzahl am
 Tag der Ladung zur jeweiligen Hausmitgliederversammlung.}
 
@@ -393,7 +408,7 @@ Hauses.}
 \begin{Artikel}{21}{Einberufung}
 
 \Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal jährlich,
-und zwar in den Zeit\-räumen 15. - 31. Mai und 15. - 30. November, statt. Sie
+und zwar in den Zeit\-räumen 15. April - 14. Mai und 15. Oktober - 14. November, statt. Sie
 wird in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
 vom Vorstand einberufen.}
 
@@ -412,13 +427,15 @@ tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
 \begin{Artikel}{22}{Zusammmensetzung und Amtszeit}
 
 \Satz{1}{Der Vorstand setzt sich aus dem Vorsitzenden, dem Schatzmeister, sowie
-dem ersten und zweiten technischen Vorstand zusammen.}
+dem ersten und zweiten technischen Vorstand zusammen. Ist das Amt des dritten
+technischen Vorstands besetzt, so gehört auch er dem Vorstand an.}
 
-\Satz{2}{Der Vorstand wird auf ein Jahr gewählt. Die Amtsperiode des Vorstandes
-läuft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis eine Neuwahl
-erfolgt. Scheidet ein Mitglied während der Amtsperiode aus, wählt der
-Adminstratiorenrat für die Zeit bis zur nächsten Mitgliedervollversammlung ein
-Ersatzmitglied.}
+\Satz{2}{Der Vorstand wird auf ein Jahr gewählt. Die Wahl erfolgt geheim und
+für jedes Vorstandsamt einzeln. Die Amtsperiode des Vorstandes
+läuft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis ein neuer
+Vorstand sein Amt angetreten hat. Scheidet ein Mitglied während der Amtsperiode
+aus, wählt der Adminstratiorenrat für die Zeit bis zur nächsten
+Mitgliedervollversammlung ein Ersatzmitglied.}
 
 \Satz{3}{Der Vorstand haftet nicht für leichte Fahrlässigkeit.}
 
@@ -443,8 +460,13 @@ Er muß mindestens 6 Monate lang Administrator gewesen sein oder mit
 satzungsändernder Mehrheit gewählt werden.}
 
 \Satz{4}{Der zweite technische Vorstand unterstützt und vertritt den ersten
-technischen Vorstand in all seinen Aufgaben und ist stellvertretender
+technischen Vorstand in all seinen Aufgaben und ist erster stellvertretender
 Vorsitzender des Administratorenrates.}
+
+\Satz{5}{Der dritte technische Vorstand unterstützt ersten und zweiten
+technischen Vorstand. Er vertritt diese in all ihren Aufgaben und ist zweiter
+stellvertretender Vorsitzender des Administratorenrates.
+Das Amt des dritten technischen Vorstands kann unbesetzt bleiben.}
 
 \end{Artikel}
 
@@ -458,7 +480,8 @@ Abwicklung notwendiger Vorgänge Sorge zu tragen.}
 finanzielle Stabilität sicherstellen.}
 
 \Satz{3}{Ausgaben sind vom Vorstand zu bewilligen. Bei Ausgaben über 3.000 EUR
-müssen alle Vorstandsmitglieder zustimmen.}
+müssen mindestens vier Vorstandsmitglieder zustimmen, darunter der
+Schatzmeister.}
 
 \Satz{4}{Die technischen Vorstände sollen jederzeit auf dem aktuellen Stand der
 technischen Infrastruktur sein.}
@@ -470,8 +493,7 @@ technischen Infrastruktur sein.}
 \begin{Artikel}{25}{Zusammensetzung}
 
 \Satz{1}{Mitglieder des Administratorenrates sind die Haus- und
-Sonderadministratoren, die beiden technischen Vorstände sowie ein Vertreter der
-Hausverwaltung. Dieser muß nicht Vereinsmitglied sein.}
+Sonderadministratoren und die technischen Vorstände.}
 
 \Satz{2}{Jedes Ratsmitglied hat eine Stimme. Vertretung ist unzulässig.}
 
@@ -495,11 +517,13 @@ normalen Netzbetrieb notwendigen Komponenten zugegriffen werden kann.}
 \begin{Artikel}{27}{Vorsitz und Einberufung}
 
 \Satz{1}{Der erste technische Vorstand ist Vorsitzender des
-Administratorenrats. Der zweite technische Vorstand ist stellvertretender
-Administratorenratsvorsitzender.}
+Administratorenrats. Der zweite technische Vorstand ist erster
+stellvertretender Administratorenratsvorsitzender, der dritte technische
+Vorstand ist dritter stellvertretender Administratorenratsvorsitzender.}
 
-\Satz{2}{Der Administratorenrat wird in der Regel vom technischen Vorstand
-einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied einberufen werden.}
+\Satz{2}{Der Administratorenrat wird in der Regel vom ersten technischen
+Vorstand einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied
+einberufen werden.}
 
 \Satz{3}{Der Administratorenrat muß auf Verlangen von 4 seiner Mitglieder
 innerhalb von 2 Wochen einberufen werden.}
@@ -514,9 +538,6 @@ Dezember und vom 1. Januar bis 30. Juni.}
 \Satz{2}{Die Sonderadministratoren werden von der Mitgliedervollversammlung
 ge\-wählt und durch Eintragung in die Administratorenliste durch den Vorstand
 bestellt.}
-
-\Satz{3}{Ist ein Sonderadministratorenamt verwaist, kann der Administratorenrat
-einen Kommissar einsetzen. Dieser hat im Administratorenrat keine Stimme.}
 
 \end{Artikel}
 
