zustimmung schatzmeister oder vorsitzender

--- a/satzung.tex
+++ b/satzung.tex
@@ -481,7 +481,7 @@ finanzielle Stabilität sicherstellen.}
 
 \Satz{3}{Ausgaben sind vom Vorstand zu bewilligen. Bei Ausgaben über 3.000 EUR
 müssen mindestens vier Vorstandsmitglieder zustimmen, darunter der
-Schatzmeister.}
+Schatzmeister oder der Vorsitzende.}
 
 \Satz{4}{Die technischen Vorstände sollen jederzeit auf dem aktuellen Stand der
 technischen Infrastruktur sein.}
