--- a/satzung.tex
+++ b/satzung.tex
@@ -434,7 +434,7 @@ technischen Vorstands besetzt, so gehört auch er dem Vorstand an.}
 für jedes Vorstandsamt einzeln. Die Amtsperiode des Vorstandes
 läuft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis ein neuer
 Vorstand sein Amt angetreten hat. Scheidet ein Mitglied während der Amtsperiode
-aus, wählt der Adminstratiorenrat für die Zeit bis zur nächsten
+aus, wählt der Administratorenrat für die Zeit bis zur nächsten
 Mitgliedervollversammlung ein Ersatzmitglied.}
 
 \Satz{3}{Der Vorstand haftet nicht für leichte Fahrlässigkeit.}
