Amtszeiten der Hausadministratoren angepasst

--- a/satzung.tex
+++ b/satzung.tex
@@ -377,8 +377,8 @@ Tag der Ladung zur jeweiligen Hausmitgliederversammlung.}
 \Satz{2}{Die Hausadministratoren leiten ihre Häuser, verwalten die Hausnetze
 und sind Mitglied im Administratorenrat.}
 
-\Satz{3}{Die Amtsperioden der Hausadministratoren laufen vom \mbox{1. Juni} bis
-30. November und vom \mbox{1. Dezember} bis \mbox{31. Mai}.}
+\Satz{3}{Die Amtsperioden der Hausadministratoren laufen vom \mbox{15. Mai} bis
+\mbox{14. November} und vom \mbox{15. November} bis \mbox{14. Mai}.}
 
 \Satz{4}{Die Wahl der Hausadministratoren ist dem Vorstand anzuzeigen.  Dieser
 führt eine Liste der derzeitig tätigen Administratoren. Mit der Aufnahme in
