Grammatikfehler behoben: "Der Schatzemister...", nicht "Die Schatzmeister..."

--- a/satzung.tex
+++ b/satzung.tex
@@ -227,7 +227,7 @@ abgelaufen ist und kein Verlängerung erfolgt ist.}
 Buch\-führung hat sich gegebenenfalls an die Vorgaben des Finanzamtes zu
 richten.}
 
-\Satz{2}{Die Schatzmeister erstellt einen Haushaltsplan und einen
+\Satz{2}{Der Schatzmeister erstellt einen Haushaltsplan und einen
 Liquiditätsplan.}
 
 \end{Artikel}
