Grammatikfehler behoben: "hat einzuberufen" statt "hat einberufen"

--- a/satzung.tex
+++ b/satzung.tex
@@ -334,7 +334,7 @@ nicht mitgezählt werden.}
 festgesetzte Tagesordnung mitzuteilen.}
 
 \Satz{4}{Der Vorstand hat unverzüglich  eine außerordentliche
-Mitgliedervollversammlung einberufen, wenn das Vereinsinteresse es erfordert
+Mitgliedervollversammlung einzuberufen, wenn das Vereinsinteresse es erfordert
 oder wenn 15 v.H. der Mitglieder oder der Administratorenrat dies schriftlich
 unter Angabe des Zwecks und der Gründe fordern.}
 
