--- a/Changelog
+++ b/Changelog
@@ -4,31 +4,31 @@
 #
 
 11.12.1998	Wolfgang Walter
-	Formatierung verbessern - keine inhaltlichen änderungen
-	Status: gültig seit 14.07.1998
+	Formatierung verbessern - keine inhaltlichen Ã¤nderungen
+	Status: gÃ¼ltig seit 14.07.1998
 
 30.11.1998	Wolfgang Walter
-	Neu formatiert - inhaltlich unverändert
-	Status: gültig seit 14.07.1998
+	Neu formatiert - inhaltlich unverÃ¤ndert
+	Status: gÃ¼ltig seit 14.07.1998
 
 14.07.1998	Wolfgang Walter
-	Version der Vereinsgründung: gültig ab 14.07.1998
-	Status: gültig seit 14.07.1998
+	Version der VereinsgrÃ¼ndung: gÃ¼ltig ab 14.07.1998
+	Status: gÃ¼ltig seit 14.07.1998
 
 14.07.1998	Wolfgang Walter
-	Überarbeitung
+	Ãœberarbeitung
 	Status: Entwurf
 
 13.07.1998	Wolfgang Walter
-	Überarbeitung
+	Ãœberarbeitung
 	Status: Entwurf
 
 13.07.1998	Wolfgang Walter
-	Überarbeitung
+	Ãœberarbeitung
 	Status: Entwurf
 
 03.06.1998	Wolfgang Walter
-	Überarbeitung
+	Ãœberarbeitung
 	Status: Entwurf
 
 27.04.1998	Wolfgang Walter
