--- a/satzung.tex
+++ b/satzung.tex
@@ -8,9 +8,9 @@
 
 \usepackage{german}
 \usepackage{a4wide}
-\usepackage{umlaut}
+\usepackage[utf8]{inputenc}
 
-% Absatzeinrückung, -abstand und Zeilenabstand
+% AbsatzeinrÃ¼ckung, -abstand und Zeilenabstand
 \parindent0em
 \parskip1.5ex plus0.5ex minus0.5ex
 
@@ -102,7 +102,7 @@ den beiden bestplazierten statt.}
 
 \Satz{3}{Von jeder Sitzung wird ein Protokoll angefertigt und an den 
 Vorstand weitergeleitet. Beschl"usse werden vom Vorstand im Netz
-veröffentlicht. Einspruch ist binnen zweier Monate nach der Ver"offentlichung
+verÃ¶ffentlicht. Einspruch ist binnen zweier Monate nach der Ver"offentlichung
 an den Vorstand zu richten.}
 
 \Satz{4}{Von dieser Satzung, allen Vereins- und Gesch"aftsordnungen, 
@@ -123,7 +123,7 @@ Postweg zu den Versammlungen eingeladen zu werden.}
 
 \Satz{1}{Jeder Bewohner der Studentenstadt kann regelm"a"sig Mitglied werden. 
 Die Aufnahme erfolgt auf schriftlichen Antrag an den Vorstand durch 
-Ausstellung einer Mitgliedskarte. Eine Ablehnung ist schriftlich zu begründen.
+Ausstellung einer Mitgliedskarte. Eine Ablehnung ist schriftlich zu begrÃ¼nden.
 Art. 10 Abs. 3 ist anzuwenden.}
 
 \Satz{2}{Es kann eine Aufnahmegeb"uhr erhoben werden. "Uber die H"ohe
@@ -219,7 +219,7 @@ Die Buch\-f"uhrung hat sich gegebenenfalls an die Vorgaben des Finanzamtes zu
 richten.}
 
 \Satz{2}{Die Schatzmeister erstellt einen Haushaltsplan und einen
-Liquiditätsplan.}
+LiquiditÃ¤tsplan.}
 
 \end{Artikel}
 
@@ -350,7 +350,7 @@ ihnen beachtet.}
 \begin{Artikel}{19}{Hausadministratoren}
 
 \Satz{1}{Jedes Haus hat einen Hausadministrator. Pro angefangene 30 
-Mitgliedern darf ein weiterer gewählt werden. Ausschlaggebend ist die 
+Mitgliedern darf ein weiterer gewÃ¤hlt werden. Ausschlaggebend ist die 
 Mitgliederzahl am \mbox{1. Januar} des jeweiligen Jahres.}
 
 \Satz{2}{Die Hausadministratoren leiten ihre H"auser, verwalten die
@@ -408,13 +408,13 @@ Wochen tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
 \Satz{1}{Der Vorstand setzt sich aus dem Vorsitzenden, dem Schatzmeister, dem
 Schriftf"uhrer und einem technischen Vorstand zusammen.}
 
-\Satz{2}{Der Vorstand wird auf ein Jahr gewählt. Die Amtsperiode des
+\Satz{2}{Der Vorstand wird auf ein Jahr gewÃ¤hlt. Die Amtsperiode des
 Vorstandes l"auft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis eine
 Neuwahl erfolgt. Scheidet ein Mitglied w"ahrend der Amtsperiode aus, w"ahlt der
 Adminstratiorenrat f"ur die Zeit bis zur n"achsten Mitgliedervollversammlung
 ein Ersatzmitglied.}
 
-\Satz{3}{Der Vorstand haftet nicht für leichte Fahrlässigkeit.}
+\Satz{3}{Der Vorstand haftet nicht fÃ¼r leichte FahrlÃ¤ssigkeit.}
 
 \end{Artikel}
 
