--- a/Changelog
+++ b/Changelog
@@ -4,45 +4,45 @@
 #
 
 02.07.1999	Wolfgang Walter
-	redaktionelle änderung: druckfehler in Art 10 Satz 5:
-		statt Satz 4 heiß es Absatz 5
+	redaktionelle Ã¤nderung: druckfehler in Art 10 Satz 5:
+		statt Satz 4 heiÃŸ es Absatz 5
 
 25.06.1999	Wolfgang Walter
-	Version gemäß der Satzungsänderung der Mitgliedervollversammlung vom
+	Version gemÃ¤ÃŸ der SatzungsÃ¤nderung der Mitgliedervollversammlung vom
 		15.06.1999
-	Außerdem quelltext etwas reformariert (und alle "a -> ä, ...)
-	Status: gültig
+	AuÃŸerdem quelltext etwas reformariert (und alle "a -> Ã¤, ...)
+	Status: gÃ¼ltig
 
 10.05.1999	Wolfgang Walter
-	Überarbeitung
+	Ãœberarbeitung
 	Status: Entwurf
 
 11.12.1998	Wolfgang Walter
-	Formatierung verbessern - keine inhaltlichen änderungen
-	Status: gültig seit 14.07.1998
+	Formatierung verbessern - keine inhaltlichen Ã¤nderungen
+	Status: gÃ¼ltig seit 14.07.1998
 
 30.11.1998	Wolfgang Walter
-	Neu formatiert - inhaltlich unverändert
-	Status: gültig seit 14.07.1998
+	Neu formatiert - inhaltlich unverÃ¤ndert
+	Status: gÃ¼ltig seit 14.07.1998
 
 14.07.1998	Wolfgang Walter
-	Version der Vereinsgründung: gültig ab 14.07.1998
-	Status: gültig seit 14.07.1998
+	Version der VereinsgrÃ¼ndung: gÃ¼ltig ab 14.07.1998
+	Status: gÃ¼ltig seit 14.07.1998
 
 14.07.1998	Wolfgang Walter
-	Überarbeitung
+	Ãœberarbeitung
 	Status: Entwurf
 
 13.07.1998	Wolfgang Walter
-	Überarbeitung
+	Ãœberarbeitung
 	Status: Entwurf
 
 13.07.1998	Wolfgang Walter
-	Überarbeitung
+	Ãœberarbeitung
 	Status: Entwurf
 
 03.06.1998	Wolfgang Walter
-	Überarbeitung
+	Ãœberarbeitung
 	Status: Entwurf
 
 27.04.1998	Wolfgang Walter
