--- a/satzung.tex
+++ b/satzung.tex
@@ -8,9 +8,9 @@
 
 \usepackage{german}
 \usepackage{a4wide}
-\usepackage{umlaut}
+\usepackage[utf8]{inputenc}
 
-% Absatzeinrückung, -abstand und Zeilenabstand
+% AbsatzeinrÃ¼ckung, -abstand und Zeilenabstand
 \parindent0em
 \parskip1.5ex plus0.5ex minus0.5ex
 
@@ -44,73 +44,73 @@
 
 \begin{Artikel}{1}{Name und Sitz}
 
-\Satz{1}{Der Verein führt den Namen {\it StuStaNet}.}
+\Satz{1}{Der Verein fÃ¼hrt den Namen {\it StuStaNet}.}
 
-\Satz{2}{Er soll ins Vereinsregister eingetragen werden und erhält
+\Satz{2}{Er soll ins Vereinsregister eingetragen werden und erhÃ¤lt
 daraufhin den Namenszusatz e.V.}
 
-\Satz{3}{Sitz des Vereins ist München.}
+\Satz{3}{Sitz des Vereins ist MÃ¼nchen.}
 
 \end{Artikel}
 
 \begin{Artikel}{2}{Zweck}
 
-\Satz{1}{Zweck des Verein ist die Studentenhilfe. Dazu errichtet und unterhält
+\Satz{1}{Zweck des Verein ist die Studentenhilfe. Dazu errichtet und unterhÃ¤lt
 er in der Studentenstadt Freimann ein Rechnernetz mit Internet-Anbindung.
-Darüber hinaus will der Verein durch Informations- und Schulungsveranstaltungen
+DarÃ¼ber hinaus will der Verein durch Informations- und Schulungsveranstaltungen
 den Studenten Kompetenz im Umgang mit den Neuen Medien vermitteln.}
 
 \Satz{2}{Um den Vereinszweck zu erreichen, arbeitet der Verein insbesondere mit
-dem Studentenwerk München und dem Leibniz-Rechenzentrum der Bayerischen
+dem Studentenwerk MÃ¼nchen und dem Leibniz-Rechenzentrum der Bayerischen
 Akademie der Wissenschaften zusammen.}
 
 \end{Artikel}
 
-\begin{Artikel}{3}{Gemeinnützigkeit}
+\begin{Artikel}{3}{GemeinnÃ¼tzigkeit}
 
-Der Verein verfolgt aussschließlich und unmittelbar gemeinnützige Zwecke im
-Sinne des Abschnitts {\it Steuerbegünstigte Zwecke} der Abgabenordnung.  Der
-Verein ist selbstlos tätig; er verfolgt nicht in erster Linie
-eigenwirtschaftliche Zwecke. Mittel des Vereins dürfen nur für die
-satzungsmäßigen Zwecke verwendet werden. Die Mitglieder erhalten keine
+Der Verein verfolgt aussschlieÃŸlich und unmittelbar gemeinnÃ¼tzige Zwecke im
+Sinne des Abschnitts {\it SteuerbegÃ¼nstigte Zwecke} der Abgabenordnung.  Der
+Verein ist selbstlos tÃ¤tig; er verfolgt nicht in erster Linie
+eigenwirtschaftliche Zwecke. Mittel des Vereins dÃ¼rfen nur fÃ¼r die
+satzungsmÃ¤ÃŸigen Zwecke verwendet werden. Die Mitglieder erhalten keine
 Zuwendungen aus Mitteln des Vereins. Es darf keine Person durch Ausgaben, die
-dem Zweck des Vereins fremd sind, oder durch unverhältnismäßig hohe Vergütungen
-begünstigt werden.
+dem Zweck des Vereins fremd sind, oder durch unverhÃ¤ltnismÃ¤ÃŸig hohe VergÃ¼tungen
+begÃ¼nstigt werden.
 
 \end{Artikel}
 
 
-\begin{Artikel}{4}{Geschäftsjahr}
+\begin{Artikel}{4}{GeschÃ¤ftsjahr}
 
-Geschäftsjahr des Vereins ist das Kalenderjahr. Das erste Rumpfgeschäftsjahr
+GeschÃ¤ftsjahr des Vereins ist das Kalenderjahr. Das erste RumpfgeschÃ¤ftsjahr
 endet am 31.12.1998.
 
 \end{Artikel}
 
 \begin{Artikel}{5}{Allgemeine Bestimmungen}
 
-\Satz{1}{Ordnungsgemäß einberufene Gremien sind beschlußfähig, wenn mindestens
+\Satz{1}{OrdnungsgemÃ¤ÃŸ einberufene Gremien sind beschluÃŸfÃ¤hig, wenn mindestens
 zwei stimmberechtigte Mitglieder anwesend sind. Sitzungen an Samstagen, Sonn-
-und Feiertagen sind unzulässig, es sei denn, das Gremium ist vollzählig.
+und Feiertagen sind unzulÃ¤ssig, es sei denn, das Gremium ist vollzÃ¤hlig.
 Insbesondere ist auf die Einhaltung einer angemessenen Frist zwischen
 Einberufung und Sitzungstermin zu achten.}
 
-\Satz{2}{Gewählt ist, wer mehr als die Hälfte der gültig abgegebenen Stimmen
-erhält. Erreicht dies kein Kandidat, findet eine Stichwahl zwischen den beiden
+\Satz{2}{GewÃ¤hlt ist, wer mehr als die HÃ¤lfte der gÃ¼ltig abgegebenen Stimmen
+erhÃ¤lt. Erreicht dies kein Kandidat, findet eine Stichwahl zwischen den beiden
 bestplazierten statt.}
 
 \Satz{3}{Von jeder Sitzung wird ein Protokoll angefertigt und an den Vorstand
-weitergeleitet. Beschlüsse werden vom Vorstand im Netz veröffentlicht.
-Einspruch ist binnen zweier Monate nach der Veröffentlichung an den Vorstand zu
+weitergeleitet. BeschlÃ¼sse werden vom Vorstand im Netz verÃ¶ffentlicht.
+Einspruch ist binnen zweier Monate nach der VerÃ¶ffentlichung an den Vorstand zu
 richten.}
 
-\Satz{4}{Von dieser Satzung, allen Vereins- und Geschäftsordnungen, und den
-Nutzungsbedingungen muß die aktuelle Fassung im Netz zugänglich sein.}
+\Satz{4}{Von dieser Satzung, allen Vereins- und GeschÃ¤ftsordnungen, und den
+Nutzungsbedingungen muÃŸ die aktuelle Fassung im Netz zugÃ¤nglich sein.}
 
 \Satz{5}{Im Eingangsbereich des Roten Hauses, Christoph-Probst-Str. 6, 80805
-Mün\-chen, wird eine Anschlagtafel angebracht. Diese ist der offizielle
+MÃ¼n\-chen, wird eine Anschlagtafel angebracht. Diese ist der offizielle
 Vereinsanzeiger. Hat ein Mitglied keine Gelegenheit, den Vereinsanzeiger
-einzusehen, so kann er bis 1. April bzw. 1. Oktober für das jeweils folgende
+einzusehen, so kann er bis 1. April bzw. 1. Oktober fÃ¼r das jeweils folgende
 Semester beim Vorstand schriftlich beantragen, auf dem Postweg zu den
 Versammlungen eingeladen zu werden.}
 
@@ -120,9 +120,9 @@ Versammlungen eingeladen zu werden.}
 
 \begin{Artikel}{6}{Mitglieder}
 
-\Satz{1}{Jeder Bewohner der Studentenstadt kann regelmäßig Mitglied werden. 
+\Satz{1}{Jeder Bewohner der Studentenstadt kann regelmÃ¤ÃŸig Mitglied werden. 
 Die Aufnahme erfolgt auf schriftlichen Antrag an den Vorstand durch Ausstellung
-einer Mitgliedskarte. Eine Ablehnung ist schriftlich zu begründen.  Art. 10
+einer Mitgliedskarte. Eine Ablehnung ist schriftlich zu begrÃ¼nden.  Art. 10
 Abs. 3 ist anzuwenden.}
 
 \end{Artikel}
@@ -132,36 +132,36 @@ Abs. 3 ist anzuwenden.}
 \Satz{1}{Jedes Mitglied hat eine Stimme auf der Mitgliedervollversammlung und
 der Hausmitgliederversammlung seines Hauses.}
 
-\Satz{2}{Es erhalten grundsätzlich nur Mitglieder Netzzugang. Der
-Administratorenrat erläßt verbindliche Nutzungsbedingungen.}
+\Satz{2}{Es erhalten grundsÃ¤tzlich nur Mitglieder Netzzugang. Der
+Administratorenrat erlÃ¤ÃŸt verbindliche Nutzungsbedingungen.}
 
-\Satz{3}{Anschriftenänderungen sind dem Vorstand unverzüglich anzuzeigen.}
+\Satz{3}{AnschriftenÃ¤nderungen sind dem Vorstand unverzÃ¼glich anzuzeigen.}
 
 \end{Artikel}
 
 %\pagebreak
 
-\begin{Artikel}{8}{Beiträge}
+\begin{Artikel}{8}{BeitrÃ¤ge}
 
-\Satz{1}{Es werden Semesterbeiträge erhoben. Über die Höhe beschließt die
-Mitgliedervollversammlung. Semesterbeiträge sind unaufgefordert bis \mbox{1.
-April} bzw. \mbox{1. Oktober} für das folgende Semester im voraus zu leisten.
-Bei Beitragsrückstand erfolgt die Streichung aus der Mitgliederliste gemäß Art.
+\Satz{1}{Es werden SemesterbeitrÃ¤ge erhoben. Ãœber die HÃ¶he beschlieÃŸt die
+Mitgliedervollversammlung. SemesterbeitrÃ¤ge sind unaufgefordert bis \mbox{1.
+April} bzw. \mbox{1. Oktober} fÃ¼r das folgende Semester im voraus zu leisten.
+Bei BeitragsrÃ¼ckstand erfolgt die Streichung aus der Mitgliederliste gemÃ¤ÃŸ Art.
 10.}
 
-\Satz{2}{Es werden Aufnahmebeiträge erhoben. Über die Höhe befindet die
-Mitgliedervollversammlung, oder bis zur Höhe von 40 DM der Vorstand.}
+\Satz{2}{Es werden AufnahmebeitrÃ¤ge erhoben. Ãœber die HÃ¶he befindet die
+Mitgliedervollversammlung, oder bis zur HÃ¶he von 40 DM der Vorstand.}
 
 \end{Artikel}
 
 \begin{Artikel}{9}{Ehrenmitglieder}
 
-\Satz{1}{Personen, die sich für den Verein besonders eingesetzt haben, können
+\Satz{1}{Personen, die sich fÃ¼r den Verein besonders eingesetzt haben, kÃ¶nnen
 auf Antrag eines Hauses, des Vorstands oder des Administratorenrats von der
 Mitgliedervollversammlung zu Ehrenmitgliedern ernannt werden.}
 
-\Satz{2}{Die Ehrenmitgliedschaft ist auf fünf Jahre befristet. Der Vorstand
-kann sie auf Antrag des Ehrenmitgliedes um jeweils fünf Jahre verlängern.}
+\Satz{2}{Die Ehrenmitgliedschaft ist auf fÃ¼nf Jahre befristet. Der Vorstand
+kann sie auf Antrag des Ehrenmitgliedes um jeweils fÃ¼nf Jahre verlÃ¤ngern.}
 
 \Satz{3}{Ehrenmitglieder sind von der Beitragspflicht befreit. Sie besitzen
 kein passives Wahlrecht.}
@@ -170,78 +170,78 @@ kein passives Wahlrecht.}
 
 \begin{Artikel}{10}{Ende der Mitgliedschaft}
 
-\Satz{1}{Die Mitgliedschaft ist grundsätzlich auf acht Semester befristet.
-Sie kann vom Vorstand auf Antrag um jeweils zwei Semester verlängert werden.}
+\Satz{1}{Die Mitgliedschaft ist grundsÃ¤tzlich auf acht Semester befristet.
+Sie kann vom Vorstand auf Antrag um jeweils zwei Semester verlÃ¤ngert werden.}
 
 \Satz{2}{Die Mitgliedschaft endet desweiteren:
 \begin{itemize}
 \item mit dem Tod des Mitglieds;
-\item durch schriftliche Austrittserklärung, die einen Monat im voraus an
+\item durch schriftliche AustrittserklÃ¤rung, die einen Monat im voraus an
 ein Vorstandsmitglied zu richten ist. 
-\item durch Ausschluß aus dem Verein;
+\item durch AusschluÃŸ aus dem Verein;
 \item durch Streichung aus der Mitgliederliste.
 \end{itemize}
-Bereits geleistete Semesterbeiträge werden anteilig zurückerstattet.}
+Bereits geleistete SemesterbeitrÃ¤ge werden anteilig zurÃ¼ckerstattet.}
 
-\Satz{3}{Ein Mitglied, das in erheblichem Maß gegen die Vereinsinteressen
-verstoßen hat, kann durch Beschluß des Vorstands aus dem Verein ausgeschlossen
-werden. Vor dem Ausschluß ist das betroffene Mitglied schriftlich zu hören. Die
-Entscheidung über den Aussschluß ist schriftlich zu begründen und dem Mitglied
-mit Einschreiben gegen Rückschein an seine letztbekannte Anschrift zuzustellen.
+\Satz{3}{Ein Mitglied, das in erheblichem MaÃŸ gegen die Vereinsinteressen
+verstoÃŸen hat, kann durch BeschluÃŸ des Vorstands aus dem Verein ausgeschlossen
+werden. Vor dem AusschluÃŸ ist das betroffene Mitglied schriftlich zu hÃ¶ren. Die
+Entscheidung Ã¼ber den AussschluÃŸ ist schriftlich zu begrÃ¼nden und dem Mitglied
+mit Einschreiben gegen RÃ¼ckschein an seine letztbekannte Anschrift zuzustellen.
 Das Mitglied kann innerhalb einer Frist von einem Monat ab Zugang schriftlich
-Berufung beim Vorstand einlegen. Über die Berufung entscheidet die
+Berufung beim Vorstand einlegen. Ãœber die Berufung entscheidet die
 Mitgliedervollversammlung. Macht das Mitglied vom Recht der Berufung innerhalb
-der Frist keinen Gebrauch, unterwirft es sich dem Ausschließungsbeschluß.}
+der Frist keinen Gebrauch, unterwirft es sich dem AusschlieÃŸungsbeschluÃŸ.}
 
 \Satz{4}{Die Streichung des Mitglieds aus der Mitgliederliste erfolgt durch den
 Vorstand, wenn das Mitglied einen Monat mit dem Semesterbeitrag in Verzug ist
 und diesen Betrag auch nach schriftlicher Mahnung durch den Vorstand nicht
 innerhalb von zwei Wochen von der Absendung der Mahnung an die letztbekannte
-Anschrift des Mitglieds voll entrichtet. In der Mahnung muß auf die
+Anschrift des Mitglieds voll entrichtet. In der Mahnung muÃŸ auf die
 bevorstehende Streichung der Mitgliedschaft hingewiesen werden.}
 
 \Satz{5}{Die Streichung erfolgt ebenfalls, wenn sich das Mitglied nicht bis zum
-14. Mai eines jeden Jahres beim Vorstand rückgemeldet hat. Artikel 10, Abs. 4
+14. Mai eines jeden Jahres beim Vorstand rÃ¼ckgemeldet hat. Artikel 10, Abs. 4
 ist entsprechend anzuwenden.}
 
 \end{Artikel}
 
-\Abschnitt{Vermögen}
+\Abschnitt{VermÃ¶gen}
 
-\begin{Artikel}{11}{Geldvermögen}
+\begin{Artikel}{11}{GeldvermÃ¶gen}
 
 \Satz{1}{Die Geldmittel des Vereins werden vom Schatzmeister verwaltet.  Die
-Buch\-führung hat sich gegebenenfalls an die Vorgaben des Finanzamtes zu
+Buch\-fÃ¼hrung hat sich gegebenenfalls an die Vorgaben des Finanzamtes zu
 richten.}
 
 \Satz{2}{Die Schatzmeister erstellt einen Haushaltsplan und einen
-Liquiditätsplan.}
+LiquiditÃ¤tsplan.}
 
 \end{Artikel}
 
-\begin{Artikel}{12}{Sachvermögen}
+\begin{Artikel}{12}{SachvermÃ¶gen}
 
 \Satz{1}{Die Sachmittel des Vereins werden von den Hausadministratoren, von den
 Sonderadministratoren, vom Vorsitzenden des Administratorenrates oder vom
-Vorstand verwaltet, abhängig davon, ob mit ihnen Aufgaben der Häuser, des
+Vorstand verwaltet, abhÃ¤ngig davon, ob mit ihnen Aufgaben der HÃ¤user, des
 Sonderbereichs, des Administratorenrates oder des Vorstandes bestritten werden.}
 
 \end{Artikel}
 
-\begin{Artikel}{13}{Gewalt über das Rechnernetz}
+\begin{Artikel}{13}{Gewalt Ã¼ber das Rechnernetz}
 
-\Satz{1}{Das Rechnernetz ist bis zu den Endgeräten durch Vereinseigentum
-aufzubauen. Seine Funktion darf nur von vereinseigener Hardware abhängen. 
+\Satz{1}{Das Rechnernetz ist bis zu den EndgerÃ¤ten durch Vereinseigentum
+aufzubauen. Seine Funktion darf nur von vereinseigener Hardware abhÃ¤ngen. 
 Hardware des Studentenwerks, von beauftragten Firmen, des
-Leibniz-Rechenzentrums oder anderer öffentlicher Einrichtungen sind davon
+Leibniz-Rechenzentrums oder anderer Ã¶ffentlicher Einrichtungen sind davon
 ausgenommen.}
 
 \Satz{2}{Weitergehende Rechte auf einem vereinseigenen Rechner oder anderen
-Netzkomponenten werden regelmäßig nur Administratoren sowie Beauftragten des
-Studentenwerks eingeräumt. Über begründete Ausnahmen beschließt der
+Netzkomponenten werden regelmÃ¤ÃŸig nur Administratoren sowie Beauftragten des
+Studentenwerks eingerÃ¤umt. Ãœber begrÃ¼ndete Ausnahmen beschlieÃŸt der
 Administratorenrat im Einvernehmen mit dem Vorstand.}
 
-\Satz{3}{Der Vorsitzende des Administratorenrates führt eine Liste, wer auf
+\Satz{3}{Der Vorsitzende des Administratorenrates fÃ¼hrt eine Liste, wer auf
 welchem der vereinseigenen Rechner oder anderen Netzkomponenten weitergehende
 Rechte besitzt.}
 
@@ -254,12 +254,12 @@ Rechte besitzt.}
 \Satz{1}{Organe des Vereins sind  
 \begin{itemize}
 \item die Mitgliedervollversammlung
-\item die Häuser
+\item die HÃ¤user
 \item der Vorstand
 \item der Administratorenrat.
 \end{itemize}}
 
-\Satz{2}{Die Vertretung nach außen im Sinne des \S 26 BGB üben immer zwei
+\Satz{2}{Die Vertretung nach auÃŸen im Sinne des \S 26 BGB Ã¼ben immer zwei
 Vorstandsmitglieder gemeinsam aus. Mit Wirkung gegen Dritte wird allen Organen
 untersagt, ohne Zustimmung der Mitgliedervollversammlung Kredite oder andere
 Verpflichtungen mit einer Laufzeit von mehr als zwei Jahren aufzunehmen.}
@@ -270,69 +270,69 @@ Verpflichtungen mit einer Laufzeit von mehr als zwei Jahren aufzunehmen.}
 
 \begin{Artikel}{15}{Aufgaben}
 
-\Satz{1}{Die Mitgliedervollversammlung kümmert sich um alle Fragen mit
-zentraler Bedeutung für den Gesamtverein.}
+\Satz{1}{Die Mitgliedervollversammlung kÃ¼mmert sich um alle Fragen mit
+zentraler Bedeutung fÃ¼r den Gesamtverein.}
 
 \Satz{2}{Sie hat insbesondere folgende Aufgaben:
 \begin{itemize}
-\item Genehmigung des Haushaltsplans für das folgende Geschäftsjahr
+\item Genehmigung des Haushaltsplans fÃ¼r das folgende GeschÃ¤ftsjahr
 \item Entgegennahme des Rechenschaftsberichts des Vorstands und dessen 
 Entlastung
 \item Wahl des Vorstands, der Sonderadministratoren und des 
-Kassenprüfungsausschusses
-\item Festsetzung der Höhe des Mitgliedsbeitrags und der Aufnahmegebühren
-\item Beschlußfassung über Satzungsänderungen und Vereinsauflösung
-\item Beschlußfassung über die Berufung eines Mitglieds gegen einen 
-Ausschluß durch den Vorstand
+KassenprÃ¼fungsausschusses
+\item Festsetzung der HÃ¶he des Mitgliedsbeitrags und der AufnahmegebÃ¼hren
+\item BeschluÃŸfassung Ã¼ber SatzungsÃ¤nderungen und VereinsauflÃ¶sung
+\item BeschluÃŸfassung Ã¼ber die Berufung eines Mitglieds gegen einen 
+AusschluÃŸ durch den Vorstand
 \end{itemize}}
 
-\Satz{3}{Sie kann eine Rahmengeschäftsordnung für alle Vereinsgremien, eine
+\Satz{3}{Sie kann eine RahmengeschÃ¤ftsordnung fÃ¼r alle Vereinsgremien, eine
 Beitragsordnung oder eine Haushaltsordnung erlassen.}
 
-\Satz{4}{Über die Beschlüsse der Mitgliedervollversammlung ist ein Protokoll
+\Satz{4}{Ãœber die BeschlÃ¼sse der Mitgliedervollversammlung ist ein Protokoll
 aufzunehmen, vom Versammlungsleiter zu unterzeichnen und vom Vorstand zu
-ver\-öffent\-lichen.}
+ver\-Ã¶ffent\-lichen.}
 
 \end{Artikel}
 
 \begin{Artikel}{16}{Einberufung}
 
-\Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jährlich,
-und zwar in den Zeiträumen 1. - 15. Juni und 1. - 15. Dezember, statt.}
+\Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jÃ¤hrlich,
+und zwar in den ZeitrÃ¤umen 1. - 15. Juni und 1. - 15. Dezember, statt.}
 
 \Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor der Versammlung vom
 Vorstand durch Aushang im Vereinsanzeiger eingeladen, wobei der Tag der
-Ver\-öffent\-lichung und der Tag der Versammlung nicht mitgezählt werden.}
+Ver\-Ã¶ffent\-lichung und der Tag der Versammlung nicht mitgezÃ¤hlt werden.}
 
 \Satz{3}{Mit der Einladung der Mitgliedervollversammlung ist die vom Vorstand
 festgesetzte Tagesordnung mitzuteilen.}
 
-\Satz{4}{Der Vorstand hat unverzüglich  eine außerordentliche
+\Satz{4}{Der Vorstand hat unverzÃ¼glich  eine auÃŸerordentliche
 Mitgliedervollversammlung einberufen, wenn das Vereinsinteresse es erfordert
 oder wenn 15 v.H. der Mitglieder oder der Administratorenrat dies schriftlich
-unter Angabe des Zwecks und der Gründe fordern.}
+unter Angabe des Zwecks und der GrÃ¼nde fordern.}
 
 \end{Artikel}
 
-\UAbschnitt{Häuser} 
+\UAbschnitt{HÃ¤user} 
 
-\begin{Artikel}{17}{Gliederung in Häuser}
+\begin{Artikel}{17}{Gliederung in HÃ¤user}
 
-\Satz{1}{Der Verein ist in Häuser untergliedert. Die Häuser regeln ihre Belange
-selbst. Der Vorstand kann den Häusern Weisungen erteilen.}
+\Satz{1}{Der Verein ist in HÃ¤user untergliedert. Die HÃ¤user regeln ihre Belange
+selbst. Der Vorstand kann den HÃ¤usern Weisungen erteilen.}
 
 \Satz{2}{Jedem Haus wird ein Netzbereich als Hausnetz zugeordnet, von dem die
-Funktion des Gesamtnetzes nicht abhängig sein darf.}
+Funktion des Gesamtnetzes nicht abhÃ¤ngig sein darf.}
 
-\Satz{3}{Die Mitglieder können die Zuordnung zu den Häusern nicht wählen. 
+\Satz{3}{Die Mitglieder kÃ¶nnen die Zuordnung zu den HÃ¤usern nicht wÃ¤hlen. 
 Ausschlaggebend ist der Standort ihres Anschlusses. Im Zweifel entscheidet der
 Vorstand.}
 
 \end{Artikel}
 
-\begin{Artikel}{18}{Zuständigkeit}
+\begin{Artikel}{18}{ZustÃ¤ndigkeit}
 
-\Satz{1}{Die Häuser organisieren das Vereinsleben auf Hausebene.}
+\Satz{1}{Die HÃ¤user organisieren das Vereinsleben auf Hausebene.}
 
 \Satz{2}{Sie verwalten ihr jeweiliges Hausnetz in eigener Regie. Die
 technischen Standards des Administratorenrates werden dabei von ihnen beachtet.}
@@ -342,20 +342,20 @@ technischen Standards des Administratorenrates werden dabei von ihnen beachtet.}
 \begin{Artikel}{19}{Hausadministratoren}
 
 \Satz{1}{Jedes Haus hat einen Hausadministrator. Pro angefangene 30 Mitgliedern
-darf ein weiterer gewählt werden. Ausschlaggebend ist die Mitgliederzahl am
+darf ein weiterer gewÃ¤hlt werden. Ausschlaggebend ist die Mitgliederzahl am
 \mbox{1. Januar} des jeweiligen Jahres.}
 
-\Satz{2}{Die Hausadministratoren leiten ihre Häuser, verwalten die Hausnetze
+\Satz{2}{Die Hausadministratoren leiten ihre HÃ¤user, verwalten die Hausnetze
 und sind Mitglied im Administratorenrat.}
 
 \Satz{3}{Die Amtsperioden der Hausadministratoren laufen vom \mbox{1. Juni} bis
 30. November und vom \mbox{1. Dezember} bis \mbox{31. Mai}.}
 
 \Satz{4}{Die Wahl der Hausadministratoren ist dem Vorstand anzuzeigen.  Dieser
-führt eine Liste der derzeitig tätigen Administratoren. Mit der Aufnahme in
-diese Liste ist der Gewählte zum Administrator bestellt.}
+fÃ¼hrt eine Liste der derzeitig tÃ¤tigen Administratoren. Mit der Aufnahme in
+diese Liste ist der GewÃ¤hlte zum Administrator bestellt.}
 
-\Satz{5}{Wählt ein Haus nicht mindestens einen Hausadministrator, oder sind
+\Satz{5}{WÃ¤hlt ein Haus nicht mindestens einen Hausadministrator, oder sind
 alle Hausadministratorenstellen eines Hauses verwaist, so setzt der
 Administratorenrat einen Hausadministrator ein.}
 
@@ -365,29 +365,29 @@ Administratorenrat einen Hausadministrator ein.}
 
 \Satz{1}{Die Hausmitgliederversammlung regelt alle Belange ihres Hauses.}
 
-\Satz{2}{Sie wählt die Hausadministratoren, überwacht deren Amtsführung und
-beschließt über ihre Entlastung.}
+\Satz{2}{Sie wÃ¤hlt die Hausadministratoren, Ã¼berwacht deren AmtsfÃ¼hrung und
+beschlieÃŸt Ã¼ber ihre Entlastung.}
 
 \Satz{3}{Die Hausadministratoren legen ihr Fragen von besonderem Gewicht zur
 Entscheidung vor.}
 
-\Satz{4}{Den Vorsitz führt in der Regel einer der Hausadministratoren des
+\Satz{4}{Den Vorsitz fÃ¼hrt in der Regel einer der Hausadministratoren des
 Hauses.}
 
 \end{Artikel}
 
 \begin{Artikel}{21}{Einberufung}
 
-\Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal jährlich,
-und zwar in den Zeit\-räumen 15. - 31. Mai und 15. - 30. November, statt. Sie
+\Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal jÃ¤hrlich,
+und zwar in den Zeit\-rÃ¤umen 15. - 31. Mai und 15. - 30. November, statt. Sie
 wird in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
 vom Vorstand einberufen.}
 
 \Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor der Versammlung von
 den Hausadministratoren durch Aushang im Vereinsanzeiger eingeladen.}
 
-\Satz{3}{Die Hausadministratoren können eine außerordentliche
-Hausmitgliederversammlung einberufen. Sie müssen das innerhalb von drei Wochen
+\Satz{3}{Die Hausadministratoren kÃ¶nnen eine auÃŸerordentliche
+Hausmitgliederversammlung einberufen. Sie mÃ¼ssen das innerhalb von drei Wochen
 tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
 
 \end{Artikel}
@@ -399,34 +399,34 @@ tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
 \Satz{1}{Der Vorstand setzt sich aus dem Vorsitzenden, dem Schatzmeister, sowie
 dem ersten und zweiten technischen Vorstand zusammen.}
 
-\Satz{2}{Der Vorstand wird auf ein Jahr gewählt. Die Amtsperiode des Vorstandes
-läuft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis eine Neuwahl
-erfolgt. Scheidet ein Mitglied während der Amtsperiode aus, wählt der
-Adminstratiorenrat für die Zeit bis zur nächsten Mitgliedervollversammlung ein
+\Satz{2}{Der Vorstand wird auf ein Jahr gewÃ¤hlt. Die Amtsperiode des Vorstandes
+lÃ¤uft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis eine Neuwahl
+erfolgt. Scheidet ein Mitglied wÃ¤hrend der Amtsperiode aus, wÃ¤hlt der
+Adminstratiorenrat fÃ¼r die Zeit bis zur nÃ¤chsten Mitgliedervollversammlung ein
 Ersatzmitglied.}
 
-\Satz{3}{Der Vorstand haftet nicht für leichte Fahrlässigkeit.}
+\Satz{3}{Der Vorstand haftet nicht fÃ¼r leichte FahrlÃ¤ssigkeit.}
 
 \end{Artikel}
 
-\begin{Artikel}{23}{Geschäftsverteilung}
+\begin{Artikel}{23}{GeschÃ¤ftsverteilung}
 
-\Satz{1}{Der Vorsitzende kümmert sich um alle wichtigen Belange des Vereins. Er
-koordiniert die Kontakte nach außen und beruft bei Bedarf Vorstandssitzungen
-ein. Er führt die Administratorenliste und sammelt und publiziert die
-Protokolle aller beschlußfassenden Gremien. Ferner sorgt er für die
-Verfügbarkeit aller gültigen Regelwerke des Vereins in der jeweils aktuellen
+\Satz{1}{Der Vorsitzende kÃ¼mmert sich um alle wichtigen Belange des Vereins. Er
+koordiniert die Kontakte nach auÃŸen und beruft bei Bedarf Vorstandssitzungen
+ein. Er fÃ¼hrt die Administratorenliste und sammelt und publiziert die
+Protokolle aller beschluÃŸfassenden Gremien. Ferner sorgt er fÃ¼r die
+VerfÃ¼gbarkeit aller gÃ¼ltigen Regelwerke des Vereins in der jeweils aktuellen
 Fassung.}
 
-\Satz{2}{Der Schatzmeister verwaltet alles Geldvermögen. Er ist verantwortlich
-für eine ordnungsgemäße Buchführung. Er führt die Mitgliederliste. Er vertritt
+\Satz{2}{Der Schatzmeister verwaltet alles GeldvermÃ¶gen. Er ist verantwortlich
+fÃ¼r eine ordnungsgemÃ¤ÃŸe BuchfÃ¼hrung. Er fÃ¼hrt die Mitgliederliste. Er vertritt
 den Vorsitzenden, falls dieser verhindert ist. Der Schatzmeister kann nicht
 gleichzeitig Administrator sein.}
 
-\Satz{3}{Der erste technische Vorstand führt den Vorsitz im Administratorenrat.
-Er muß mindestens ein Jahr lang Administrator gewesen sein.}
+\Satz{3}{Der erste technische Vorstand fÃ¼hrt den Vorsitz im Administratorenrat.
+Er muÃŸ mindestens ein Jahr lang Administrator gewesen sein.}
 
-\Satz{4}{Der zweite technische Vorstand unterstützt und vertritt den ersten
+\Satz{4}{Der zweite technische Vorstand unterstÃ¼tzt und vertritt den ersten
 technischen Vorstand in all seinen Aufgaben und ist stellvertretender
 Vorsitzender des Administratorenrates.}
 
@@ -434,18 +434,18 @@ Vorsitzender des Administratorenrates.}
 
 \begin{Artikel}{24}{Aufgaben}
 
-\Satz{1}{Die Vorstände sind die kaufmännische und organisatorische 
-Führung des Vereins. Sie haben auch im Falle ihrer Abwesenheit für die 
-Abwicklung notwendiger Vorgänge Sorge zu tragen.}
+\Satz{1}{Die VorstÃ¤nde sind die kaufmÃ¤nnische und organisatorische 
+FÃ¼hrung des Vereins. Sie haben auch im Falle ihrer Abwesenheit fÃ¼r die 
+Abwicklung notwendiger VorgÃ¤nge Sorge zu tragen.}
 
-\Satz{2}{Die Vorstände sollen die Entwicklung des Vereins fördern und die
-finanzielle Stabilität sicherstellen.}
+\Satz{2}{Die VorstÃ¤nde sollen die Entwicklung des Vereins fÃ¶rdern und die
+finanzielle StabilitÃ¤t sicherstellen.}
 
 \Satz{3}{Ausgaben sind vom Vorstand zu bewilligen.
-Bei Ausgaben über 5.000 DM holt er die Genehmigung der 
+Bei Ausgaben Ã¼ber 5.000 DM holt er die Genehmigung der 
 Mitgliedervollversammlung ein.}
 
-\Satz{4}{Die technischen Vorstände sollen jederzeit auf dem aktuellen Stand der
+\Satz{4}{Die technischen VorstÃ¤nde sollen jederzeit auf dem aktuellen Stand der
 Netzwerkarchitektur sein.}
 
 \end{Artikel}
@@ -455,25 +455,25 @@ Netzwerkarchitektur sein.}
 \begin{Artikel}{25}{Zusammensetzung}
 
 \Satz{1}{Mitglieder des Administratorenrates sind die Haus- und
-Sonderadministratoren, die beiden technischen Vorstände sowie ein Vertreter der
-Hausverwaltung. Dieser muß nicht Vereinsmitglied sein.}
+Sonderadministratoren, die beiden technischen VorstÃ¤nde sowie ein Vertreter der
+Hausverwaltung. Dieser muÃŸ nicht Vereinsmitglied sein.}
 
-\Satz{2}{Jedes Ratsmitglied hat eine Stimme. Vertretung ist unzulässig.}
+\Satz{2}{Jedes Ratsmitglied hat eine Stimme. Vertretung ist unzulÃ¤ssig.}
 
 \end{Artikel}
 
 \begin{Artikel}{26}{Aufgaben}
 
-\Satz{1}{Der Administratorenrat kümmert sich um alle technischen Belange.}
+\Satz{1}{Der Administratorenrat kÃ¼mmert sich um alle technischen Belange.}
 
-\Satz{2}{Er legt verbindliche technische Standards fest und verwaltet die für
+\Satz{2}{Er legt verbindliche technische Standards fest und verwaltet die fÃ¼r
 den Betrieb des Gesamtnetzes notwendigen Netzkomponenten.}
 
-\Satz{3}{Der Administratorenrat bestreitet seine regelmäßigen Aufgaben mit
-einer Instandhaltungspauschale, deren Höhe von der ordentlichen
+\Satz{3}{Der Administratorenrat bestreitet seine regelmÃ¤ÃŸigen Aufgaben mit
+einer Instandhaltungspauschale, deren HÃ¶he von der ordentlichen
 Mitgliedervollversammlung festgelegt wird.}
 
-\Satz{4}{Alle Administratoren stellen sicher, daß schnell auf alle für den
+\Satz{4}{Alle Administratoren stellen sicher, daÃŸ schnell auf alle fÃ¼r den
 normalen Netzbetrieb notwendigen Komponenten zugegriffen werden kann.}
 
 \end{Artikel}
@@ -487,9 +487,9 @@ Administratorenratsvorsitzender.}
 \Satz{2}{Der Administratorenrat wird in der Regel vom technischen Vorstand
 einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied einberufen werden.}
 
-\Satz{3}{Der Administratorenrat muß auf Verlangen von 2 seiner Mitglieder
+\Satz{3}{Der Administratorenrat muÃŸ auf Verlangen von 2 seiner Mitglieder
 innerhalb von 2 Wochen, auf Verlangen von 4 Hausadministratoren aus 4
-verschiedenen Häusern innerhalb einer Woche einberufen werden.}
+verschiedenen HÃ¤usern innerhalb einer Woche einberufen werden.}
 
 \end{Artikel}
 
@@ -499,12 +499,12 @@ verschiedenen Häusern innerhalb einer Woche einberufen werden.}
 Dezember und vom 1. Januar bis 30. Juni.}
 
 \Satz{2}{Die Sonderadministratoren werden von der Mitgliedervollversammlung
-ge\-wählt und durch Eintragung in die Administratorenliste durch den Vorstand
+ge\-wÃ¤hlt und durch Eintragung in die Administratorenliste durch den Vorstand
 bestellt.}
 
-\Satz{3}{Die Sonderadministratoren verfügen nicht über eigene Mittel. 
+\Satz{3}{Die Sonderadministratoren verfÃ¼gen nicht Ã¼ber eigene Mittel. 
 Instandhaltungsaufwendungen sind aus Mitteln der Instandhaltungspauschale zu
-bestreiten und müssen beim Administratorenrat beantragt werden. 
+bestreiten und mÃ¼ssen beim Administratorenrat beantragt werden. 
 Neuanschaffungen bewilligt der Vorstand.}
 
 \Satz{4}{Ist ein Sonderadministratorenamt verwaist, kann der Administratorenrat
@@ -513,34 +513,34 @@ einen Kommissar einsetzen. Dieser hat im Administratorenrat keine Stimme.}
 \end{Artikel}
 
 
-\Abschnitt{Wenn alle Stricke reißen}
+\Abschnitt{Wenn alle Stricke reiÃŸen}
 
-\begin{Artikel}{29}{Satzungsänderungen}
+\begin{Artikel}{29}{SatzungsÃ¤nderungen}
 
-\Satz{1}{Satzungsänderungen beschließt die Mitgliedervollversammlung mit
+\Satz{1}{SatzungsÃ¤nderungen beschlieÃŸt die Mitgliedervollversammlung mit
 Zweidrittelmehrheit auf gemeinsamen Antrag von Vorstand und Administratorenrat
 oder von 15 v.H. der Mitglieder.}
 
-\Satz{2}{Die Änderung ist im Vereinsregister einzutragen.}
+\Satz{2}{Die Ã„nderung ist im Vereinsregister einzutragen.}
 
 \end{Artikel}
 
-\begin{Artikel}{30}{Auflösung}
+\begin{Artikel}{30}{AuflÃ¶sung}
 
-\Satz{1}{Die Auflösung bestimmt sich nach den Regeln der Satzungsänderung.}
+\Satz{1}{Die AuflÃ¶sung bestimmt sich nach den Regeln der SatzungsÃ¤nderung.}
 
-\Satz{2}{Bei Auflösung des Vereins fällt das Vermögen an das Studentenwerk
-München, Anstalt des öffentlichen Rechts, mit der Maßgabe es unmittelbar und
-ausschließlich im Sinn des Vereinszwecks zu verwenden.}
+\Satz{2}{Bei AuflÃ¶sung des Vereins fÃ¤llt das VermÃ¶gen an das Studentenwerk
+MÃ¼nchen, Anstalt des Ã¶ffentlichen Rechts, mit der MaÃŸgabe es unmittelbar und
+ausschlieÃŸlich im Sinn des Vereinszwecks zu verwenden.}
 
 \end{Artikel}
 
-\begin{Artikel}{31}{Vollzug bei Satzungsänderungen}
+\begin{Artikel}{31}{Vollzug bei SatzungsÃ¤nderungen}
 
-Die Satzungsänderung ist durch den Vorstand zur Eintragung in das
-Vereinsregister anzumelden. Dem Vorsitzenden ist das Recht übertragen, etwaige
-Satzungsänderungen, die das Registergericht für die Eintragung einer
-Satzungsänderung verlangen sollte, vorzunehmen.
+Die SatzungsÃ¤nderung ist durch den Vorstand zur Eintragung in das
+Vereinsregister anzumelden. Dem Vorsitzenden ist das Recht Ã¼bertragen, etwaige
+SatzungsÃ¤nderungen, die das Registergericht fÃ¼r die Eintragung einer
+SatzungsÃ¤nderung verlangen sollte, vorzunehmen.
 
 \end{Artikel}
 
