Kleine Rechtschreib-/Tipp-/Grammatikfehler

--- a/satzung.tex
+++ b/satzung.tex
@@ -215,7 +215,7 @@ bevorstehende Streichung der Mitgliedschaft hingewiesen werden.}
 dem Verein zuletzt bekannt gegebenen Postanschrift keinen Wohnsitz mehr hat.}
 
 \Satz{6}{Die Streichung erfolgt außerdem regelmäßig, wenn die Mitgliedschaft
-abgelaufen ist und kein Verlängerung erfolgt ist.}
+abgelaufen ist und keine Verlängerung erfolgt ist.}
 
 \end{Artikel}
 
@@ -323,7 +323,7 @@ ver\-öffent\-lichen.}
 \begin{Artikel}{16}{Einberufung}
 
 \Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jährlich,
-und zwar in den Zeiträumen 15. Mai - 15. Juni und 15. Novermber - 15. Dezember, statt.}
+und zwar in den Zeiträumen 15. Mai - 15. Juni und 15. November - 15. Dezember, statt.}
 
 \Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
 Mitgliedervollversammlung vom Vorstand durch Aushang im Vereinsanzeiger
@@ -409,7 +409,7 @@ Hauses.}
 
 \Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal jährlich,
 und zwar in den Zeit\-räumen 15. April - 14. Mai und 15. Oktober - 14. November, statt. Sie
-wird in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
+werden in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
 vom Vorstand einberufen.}
 
 \Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
