--- a/satzung.tex
+++ b/satzung.tex
@@ -435,7 +435,9 @@ für jedes Vorstandsamt einzeln. Die Amtsperiode des Vorstandes
 läuft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis ein neuer
 Vorstand sein Amt angetreten hat. Scheidet ein Mitglied während der Amtsperiode
 aus, wählt der Administratorenrat für die Zeit bis zur nächsten
-Mitgliedervollversammlung ein Ersatzmitglied.}
+Mitgliedervollversammlung ein Ersatzmitglied. Scheidet der dritte technische
+Vorstand während der Amtsperiode aus, wird für diesen kein Ersatzmitglied
+bestimmt.}
 
 \Satz{3}{Der Vorstand haftet nicht für leichte Fahrlässigkeit.}
 
