Der satz "Sie wird ..." war richtig und kein Fehler.
Es ging um eine Versammlung, nicht um alle.

--- a/satzung.tex
+++ b/satzung.tex
@@ -409,7 +409,7 @@ Hauses.}
 
 \Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal jährlich,
 und zwar in den Zeit\-räumen 15. April - 14. Mai und 15. Oktober - 14. November, statt. Sie
-werden in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
+wird in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
 vom Vorstand einberufen.}
 
 \Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
