3.TV ist 2. Stellvertreter für AR-Vorsitz

--- a/satzung.tex
+++ b/satzung.tex
@@ -519,7 +519,7 @@ normalen Netzbetrieb notwendigen Komponenten zugegriffen werden kann.}
 \Satz{1}{Der erste technische Vorstand ist Vorsitzender des
 Administratorenrats. Der zweite technische Vorstand ist erster
 stellvertretender Administratorenratsvorsitzender, der dritte technische
-Vorstand ist dritter stellvertretender Administratorenratsvorsitzender.}
+Vorstand ist zweiter stellvertretender Administratorenratsvorsitzender.}
 
 \Satz{2}{Der Administratorenrat wird in der Regel vom ersten technischen
 Vorstand einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied
