Wahlzeiträume angepasst an die Vorlesungszeiten der TUM

--- a/satzung.tex
+++ b/satzung.tex
@@ -313,7 +313,7 @@ ver\-öffent\-lichen.}
 \begin{Artikel}{16}{Einberufung}
 
 \Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jährlich,
-und zwar in den Zeiträumen 1. - 15. Juni und 1. - 15. Dezember, statt.}
+und zwar im Zeitraum von 4 Wochen bis 8 Wochen nach offiziellem Vorlesungsbeginn von Sommer- und Wintersemester der Technischen Universität München, statt.}
 
 \Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
 Mitgliedervollversammlung vom Vorstand durch Aushang im Vereinsanzeiger
@@ -367,8 +367,7 @@ Tag der Ladung zur jeweiligen Hausmitgliederversammlung.}
 \Satz{2}{Die Hausadministratoren leiten ihre Häuser, verwalten die Hausnetze
 und sind Mitglied im Administratorenrat.}
 
-\Satz{3}{Die Amtsperioden der Hausadministratoren laufen vom \mbox{1. Juni} bis
-30. November und vom \mbox{1. Dezember} bis \mbox{31. Mai}.}
+\Satz{3}{Die Amtsperioden der Hausadministratoren laufen ab ihrer Wahl bis zur nächsten Wahl, längstens bis zum Ende des nächsten Zeitraums für Hausmitgliederversammlungen.}
 
 \Satz{4}{Die Wahl der Hausadministratoren ist dem Vorstand anzuzeigen.  Dieser
 führt eine Liste der derzeitig tätigen Administratoren. Mit der Aufnahme in
@@ -398,7 +397,7 @@ Hauses.}
 \begin{Artikel}{21}{Einberufung}
 
 \Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal jährlich,
-und zwar in den Zeit\-räumen 15. - 31. Mai und 15. - 30. November, statt. Sie
+und zwar zwischen 4 Wochen und 8 Wochen nach Vorlesungsbeginn von Winter- und Sommersemester der Technischen Universität München statt. Sie
 wird in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
 vom Vorstand einberufen.}
 
