--- a/satzung.tex
+++ b/satzung.tex
@@ -424,14 +424,17 @@ tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
 \begin{Artikel}{22}{Zusammmensetzung und Amtszeit}
 
 \Satz{1}{Der Vorstand setzt sich aus dem Vorsitzenden, dem Schatzmeister, sowie
-dem ersten und zweiten technischen Vorstand zusammen.}
+dem ersten und zweiten technischen Vorstand zusammen. Ist das Amt des dritten
+technischen Vorstands besetzt, so gehört auch er dem Vorstand an.}
 
 \Satz{2}{Der Vorstand wird auf ein Jahr gewählt. Die Wahl erfolgt geheim und
 für jedes Vorstandsamt einzeln. Die Amtsperiode des Vorstandes
 läuft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis ein neuer
 Vorstand sein Amt angetreten hat. Scheidet ein Mitglied während der Amtsperiode
 aus, wählt der Administratorenrat für die Zeit bis zur nächsten
-Mitgliedervollversammlung ein Ersatzmitglied.}
+Mitgliedervollversammlung ein Ersatzmitglied.
+Scheidet der dritte Technische Vorstand während der Amtsperiode aus, so wird für
+diesen kein Ersatzmitglied bestimmt.}
 
 \Satz{3}{Der Vorstand haftet nicht für leichte Fahrlässigkeit.}
 
@@ -456,8 +459,13 @@ Er muß mindestens 6 Monate lang Administrator gewesen sein oder mit
 satzungsändernder Mehrheit gewählt werden.}
 
 \Satz{4}{Der zweite technische Vorstand unterstützt und vertritt den ersten
-technischen Vorstand in all seinen Aufgaben und ist stellvertretender
+technischen Vorstand in all seinen Aufgaben und ist erster stellvertretender
 Vorsitzender des Administratorenrates.}
+
+\Satz{5}{Der dritte technische Vorstand unterstützt ersten und zweiten
+technischen Vorstand. Er vertritt diese in all ihren Aufgaben und ist zweiter
+stellvertretender Vorsitzender des Administratorenrates.
+Das Amt des dritten technischen Vorstands kann unbesetzt bleiben.}
 
 \end{Artikel}
 
@@ -471,7 +479,8 @@ Abwicklung notwendiger Vorgänge Sorge zu tragen.}
 finanzielle Stabilität sicherstellen.}
 
 \Satz{3}{Ausgaben sind vom Vorstand zu bewilligen. Bei Ausgaben über 3.000 EUR
-müssen alle Vorstandsmitglieder zustimmen.}
+müssen mindestens vier Vorstandsmitglieder zustimmen, darunter der
+Schatzmeister oder der Vorsitzende.}
 
 \Satz{4}{Die technischen Vorstände sollen jederzeit auf dem aktuellen Stand der
 technischen Infrastruktur sein.}
@@ -507,8 +516,9 @@ normalen Netzbetrieb notwendigen Komponenten zugegriffen werden kann.}
 \begin{Artikel}{27}{Vorsitz und Einberufung}
 
 \Satz{1}{Der erste technische Vorstand ist Vorsitzender des
-Administratorenrats. Der zweite technische Vorstand ist stellvertretender
-Administratorenratsvorsitzender.}
+Administratorenrats. Der zweite technische Vorstand ist erster
+stellvertretender Administratorenratsvorsitzender, der dritte technische
+Vorstand ist zweiter stellvertretender Administratorenratsvorsitzender.}
 
 \Satz{2}{Der Administratorenrat wird in der Regel vom ersten technischen
 Vorstand einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied
