Satzungsänderngen für die Erweiterung in das Max Bill Wohnheim und möglicher zukünftiger Wohnheime

--- a/satzung.tex
+++ b/satzung.tex
@@ -118,7 +118,8 @@ der offizielle Vereinsanzeiger.}
 
 \begin{Artikel}{6}{Mitglieder}
 
-\Satz{1}{Jeder Bewohner der Studentenstadt kann regelmäßig Mitglied werden. 
+\Satz{1}{Jeder Bewohner der Studentenstadt oder eines anderen vom Verein
+betreuten Studentenwohnheims kann regelmäßig Mitglied werden. 
 Die Aufnahme erfolgt auf schriftlichen Antrag an den Vorstand durch Ausstellung
 einer Mitgliedskarte. Eine Ablehnung ist schriftlich zu begründen.  Art. 10
 Abs. 3 ist anzuwenden.}
@@ -292,6 +293,10 @@ Kassenprüfungsausschusses
 \item Beschlußfassung über Satzungsänderungen und Vereinsauflösung
 \item Beschlußfassung über die Berufung eines Mitglieds gegen einen 
 Ausschluß durch den Vorstand
+\item Die Einteilung der Studentenstadt und anderer vom Verein betreuten
+Studentenwohnheime in Häuser
+\item Sie entscheidet, welche Studentenwohnheime neben der Studentenstadt
+vom Verein betreut werden.
 \end{itemize}}
 
 \Satz{3}{Sie kann eine Rahmengeschäftsordnung für alle Vereinsgremien, eine
