Verschiedene kleinere Änderungen

--- a/satzung.tex
+++ b/satzung.tex
@@ -112,7 +112,7 @@ Nutzungsbedingungen muß die aktuelle Fassung im Netz zugänglich sein.}
 \Satz{5}{Im Eingangsbereich des Roten Hauses, Christoph-Probst-Str. 6, 80805
 Mün\-chen, wird eine Anschlagtafel angebracht. Diese ist der offizielle
 Vereinsanzeiger. Zusätzlich werden die Mitteilungen unter der URL
-"`http://vereinsanzeiger.stusta.mhn.de/"' veröffentlicht.  Hat ein Mitglied
+"`http://vereinsanzeiger.stustanet.de/"' veröffentlicht.  Hat ein Mitglied
 keine Gelegenheit, den Vereinsanzeiger einzusehen, so kann er bis 1. April bzw.
 1. Oktober für das jeweils folgende Semester beim Vorstand schriftlich
 beantragen, auf dem Postweg zu den Versammlungen eingeladen zu werden.}
@@ -175,7 +175,10 @@ bleiben ihre Rechte und Pflichten als Mitglied unberührt.}
 \begin{Artikel}{10}{Ende der Mitgliedschaft}
 
 \Satz{1}{Die Mitgliedschaft ist grundsätzlich auf 4 Jahre befristet.
-Sie kann vom Vorstand auf Antrag um jeweils bis zu 4 Jahre verlängert werden.
+Sie endet jedoch immer erst zu dem Zeitpunkt, an dem der Vorstand das
+Mitglied aus der Mitgliederliste streicht.
+Die Mitgliedschaft kann vom Vorstand auf Antrag um jeweils bis zu 4 Jahre 
+verlängert werden.
 Bekleidet ein Mitglied ein Amt und würde seine Mitgliedschaft während seiner
 Amtszeit enden, so verlängert sie sich automatisch um ein weiteres Jahr.}
 
@@ -187,7 +190,8 @@ ein Vorstandsmitglied zu richten ist.
 \item durch Ausschluß aus dem Verein;
 \item durch Streichung aus der Mitgliederliste.
 \end{itemize}
-Bereits geleistete Semesterbeiträge werden anteilig zurückerstattet.}
+Bereits geleistete Semesterbeiträge werden anteilig an Monaten zurückerstattet, wenn
+dieser Anteil 25 EUR übersteigt.}
 
 \Satz{3}{Ein Mitglied, das in erheblichem Maß gegen die Vereinsinteressen
 verstoßen hat, kann durch Beschluß des Vorstands aus dem Verein ausgeschlossen
@@ -209,6 +213,9 @@ bevorstehende Streichung der Mitgliedschaft hingewiesen werden.}
 \Satz{5}{Die Streichung erfolgt regelmäßig ebenfalls, wenn das Mitglied an der
 dem Verein zuletzt bekannt gegebenen Postanschrift keinen Wohnsitz mehr hat.}
 
+\Satz{6}{Die Streichung erfolgt außerdem regelmäßig, wenn die Mitgliedschaft
+abgelaufen ist und keine Verlängerung erfolgt ist.}
+
 \end{Artikel}
 
 \Abschnitt{Vermögen}
@@ -219,7 +226,7 @@ dem Verein zuletzt bekannt gegebenen Postanschrift keinen Wohnsitz mehr hat.}
 Buch\-führung hat sich gegebenenfalls an die Vorgaben des Finanzamtes zu
 richten.}
 
-\Satz{2}{Die Schatzmeister erstellt einen Haushaltsplan und einen
+\Satz{2}{Der Schatzmeister erstellt einen Haushaltsplan und einen
 Liquiditätsplan.}
 
 \end{Artikel}
@@ -322,7 +329,7 @@ nicht mitgezählt werden.}
 festgesetzte Tagesordnung mitzuteilen.}
 
 \Satz{4}{Der Vorstand hat unverzüglich  eine außerordentliche
-Mitgliedervollversammlung einberufen, wenn das Vereinsinteresse es erfordert
+Mitgliedervollversammlung einzuberufen, wenn das Vereinsinteresse es erfordert
 oder wenn 15 v.H. der Mitglieder oder der Administratorenrat dies schriftlich
 unter Angabe des Zwecks und der Gründe fordern.}
 
@@ -342,6 +349,9 @@ erteilen.}
 Ausschlaggebend ist der Standort ihres Anschlusses. Im Zweifel entscheidet der
 Vorstand.}
 
+\Satz{4}{Mitglieder, die nicht in einem vom Verein betreuten Studentenwohnheim
+wohnen, gehören keinem Haus an.}
+
 \end{Artikel}
 
 \begin{Artikel}{18}{Zuständigkeit}
@@ -355,7 +365,7 @@ des Administratorenrates werden dabei von ihnen beachtet.}
 
 \begin{Artikel}{19}{Hausadministratoren}
 
-\Satz{1}{Jedes Haus hat einen Hausadministrator. Pro angefangene 30 Mitgliedern
+\Satz{1}{Jedes Haus hat einen Hausadministrator. Pro angefangene 20 Mitgliedern
 darf ein weiterer gewählt werden. Ausschlaggebend ist die Mitgliederzahl am
 Tag der Ladung zur jeweiligen Hausmitgliederversammlung.}
 
@@ -414,11 +424,12 @@ tun, wenn 15 v.H. der Hausmitglieder dies fordern.}
 \Satz{1}{Der Vorstand setzt sich aus dem Vorsitzenden, dem Schatzmeister, sowie
 dem ersten und zweiten technischen Vorstand zusammen.}
 
-\Satz{2}{Der Vorstand wird auf ein Jahr gewählt. Die Amtsperiode des Vorstandes
-läuft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis eine Neuwahl
-erfolgt. Scheidet ein Mitglied während der Amtsperiode aus, wählt der
-Adminstratiorenrat für die Zeit bis zur nächsten Mitgliedervollversammlung ein
-Ersatzmitglied.}
+\Satz{2}{Der Vorstand wird auf ein Jahr gewählt. Die Wahl erfolgt geheim und
+für jedes Vorstandsamt einzeln. Die Amtsperiode des Vorstandes
+läuft vom 1. Juli bis 30. Juni. Er bleibt so lange im Amt, bis ein neuer
+Vorstand sein Amt angetreten hat. Scheidet ein Mitglied während der Amtsperiode
+aus, wählt der Administratorenrat für die Zeit bis zur nächsten
+Mitgliedervollversammlung ein Ersatzmitglied.}
 
 \Satz{3}{Der Vorstand haftet nicht für leichte Fahrlässigkeit.}
 
@@ -470,8 +481,7 @@ technischen Infrastruktur sein.}
 \begin{Artikel}{25}{Zusammensetzung}
 
 \Satz{1}{Mitglieder des Administratorenrates sind die Haus- und
-Sonderadministratoren, die beiden technischen Vorstände sowie ein Vertreter der
-Hausverwaltung. Dieser muß nicht Vereinsmitglied sein.}
+Sonderadministratoren und die technischen Vorstände.}
 
 \Satz{2}{Jedes Ratsmitglied hat eine Stimme. Vertretung ist unzulässig.}
 
@@ -498,8 +508,9 @@ normalen Netzbetrieb notwendigen Komponenten zugegriffen werden kann.}
 Administratorenrats. Der zweite technische Vorstand ist stellvertretender
 Administratorenratsvorsitzender.}
 
-\Satz{2}{Der Administratorenrat wird in der Regel vom technischen Vorstand
-einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied einberufen werden.}
+\Satz{2}{Der Administratorenrat wird in der Regel vom ersten technischen
+Vorstand einberufen. Bei Bedarf kann er von jedem Vorstandsmitglied
+einberufen werden.}
 
 \Satz{3}{Der Administratorenrat muß auf Verlangen von 4 seiner Mitglieder
 innerhalb von 2 Wochen einberufen werden.}
@@ -514,9 +525,6 @@ Dezember und vom 1. Januar bis 30. Juni.}
 \Satz{2}{Die Sonderadministratoren werden von der Mitgliedervollversammlung
 ge\-wählt und durch Eintragung in die Administratorenliste durch den Vorstand
 bestellt.}
-
-\Satz{3}{Ist ein Sonderadministratorenamt verwaist, kann der Administratorenrat
-einen Kommissar einsetzen. Dieser hat im Administratorenrat keine Stimme.}
 
 \end{Artikel}
 
