--- a/satzung.tex
+++ b/satzung.tex
@@ -311,7 +311,7 @@ ver\-öffent\-lichen.}
 \begin{Artikel}{16}{Einberufung}
 
 \Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jährlich,
-und zwar im Zeitraum von 4 Wochen bis 8 Wochen nach offiziellem Vorlesungsbeginn von Sommer- und Wintersemester der Technischen Universität München, statt.}
+und zwar in den Zeiträumen 15. Mai bis 15. Juni und 15. November bis 15. Dezember statt.}
 
 \Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
 Mitgliedervollversammlung vom Vorstand durch Aushang im Vereinsanzeiger
@@ -362,7 +362,9 @@ Tag der Ladung zur jeweiligen Hausmitgliederversammlung.}
 \Satz{2}{Die Hausadministratoren leiten ihre Häuser, verwalten die Hausnetze
 und sind Mitglied im Administratorenrat.}
 
-\Satz{3}{Die Amtsperioden der Hausadministratoren laufen ab ihrer Wahl bis zur nächsten Wahl, längstens bis zum Ende des nächsten Zeitraums für Hausmitgliederversammlungen.}
+\Satz{3}{Die Amtsperioden der Hausadministratoren laufen ab der Anzeige beim
+Vorstand und bis zum Amtsantritt eines neuen oder spätestens Ende des
+Wahlzeitraumes.}
 
 \Satz{4}{Die Wahl der Hausadministratoren ist dem Vorstand anzuzeigen.  Dieser
 führt eine Liste der derzeitig tätigen Administratoren. Mit der Aufnahme in
@@ -392,7 +394,7 @@ Hauses.}
 \begin{Artikel}{21}{Einberufung}
 
 \Satz{1}{Die ordentlichen Hausmitgliederversammlungen finden zweimal jährlich,
-und zwar zwischen 4 Wochen und 8 Wochen nach Vorlesungsbeginn von Winter- und Sommersemester der Technischen Universität München statt. Sie
+und zwar in den Zeiträumen 15. April bis 15. Mai und 15. Oktober bis 15. November, statt. Sie
 wird in der Regel von einem der Hausadministratoren des Hauses, im Ausnahmefall
 vom Vorstand einberufen.}
 
