Adminrat 2017-09-07: Kein Hardwareanzeiger

--- a/satzung.tex
+++ b/satzung.tex
@@ -109,10 +109,8 @@ richten.}
 \Satz{4}{Von dieser Satzung, allen Vereins- und Geschäftsordnungen, und den
 Nutzungsbedingungen muß die aktuelle Fassung im Netz zugänglich sein.}
 
-\Satz{5}{Im Eingangsbereich des Roten Hauses, Christoph-Probst-Str. 6, 80805
-Mün\-chen, wird eine Anschlagtafel angebracht. Diese ist der offizielle
-Vereinsanzeiger. Zusätzlich werden die Mitteilungen unter der URL
-"`http://vereinsanzeiger.stustanet.de/"' veröffentlicht.  Hat ein Mitglied
+\Satz{5}{Unter der URL "`http://vereinsanzeiger.stustanet.de/"' befindet sich
+der offizielle Vereinsanzeiger. Hat ein Mitglied
 keine Gelegenheit, den Vereinsanzeiger einzusehen, so kann er bis 1. April bzw.
 1. Oktober für das jeweils folgende Semester beim Vorstand schriftlich
 beantragen, auf dem Postweg zu den Versammlungen eingeladen zu werden.}
