umformulierung Amtsperioden Hausadministratoren

--- a/satzung.tex
+++ b/satzung.tex
@@ -362,9 +362,9 @@ Tag der Ladung zur jeweiligen Hausmitgliederversammlung.}
 \Satz{2}{Die Hausadministratoren leiten ihre Häuser, verwalten die Hausnetze
 und sind Mitglied im Administratorenrat.}
 
-\Satz{3}{Die Amtsperioden der Hausadministratoren laufen ab der Anzeige beim
-Vorstand und bis zum Amtsantritt eines neuen oder spätestens Ende des
-Wahlzeitraumes.}
+\Satz{3}{Die Amtsperioden der Hausadministratoren laufen ab der Aufnahme durch
+den vorsitzenden Vorstand auf die Adminliste bis zum Amtsantritt eines neuen
+oder spätestens Ende des Wahlzeitraumes.}
 
 \Satz{4}{Die Wahl der Hausadministratoren ist dem Vorstand anzuzeigen.  Dieser
 führt eine Liste der derzeitig tätigen Administratoren. Mit der Aufnahme in
