Wir können davon ausgehen, dass jedes Mitglied Internetzugang hat, und es ist erlaubt nach Vereinsrecht.
§171gg Vereinsrecht

--- a/satzung.tex
+++ b/satzung.tex
@@ -110,10 +110,7 @@ richten.}
 Nutzungsbedingungen muß die aktuelle Fassung im Netz zugänglich sein.}
 
 \Satz{5}{Unter der URL "`http://vereinsanzeiger.stustanet.de/"' befindet sich
-der offizielle Vereinsanzeiger. Hat ein Mitglied
-keine Gelegenheit, den Vereinsanzeiger einzusehen, so kann er bis 1. April bzw.
-1. Oktober für das jeweils folgende Semester beim Vorstand schriftlich
-beantragen, auf dem Postweg zu den Versammlungen eingeladen zu werden.}
+der offizielle Vereinsanzeiger.}
 
 \end{Artikel}
 
