anpassung MVV termin, umformulierung amtsperiode hausadmins

--- a/satzung.tex
+++ b/satzung.tex
@@ -311,7 +311,7 @@ ver\-öffent\-lichen.}
 \begin{Artikel}{16}{Einberufung}
 
 \Satz{1}{Die ordentlichen Mitgliedervollversammlungen finden zweimal jährlich,
-und zwar in den Zeiträumen 15. Mai bis 15. Juni und 15. November bis 15. Dezember statt.}
+und zwar in den Zeiträumen 16. Mai bis 16. Juni und 16. November bis 16. Dezember statt.}
 
 \Satz{2}{Die Mitglieder werden mindestens zwei Wochen vor einer
 Mitgliedervollversammlung vom Vorstand durch Aushang im Vereinsanzeiger
@@ -362,9 +362,10 @@ Tag der Ladung zur jeweiligen Hausmitgliederversammlung.}
 \Satz{2}{Die Hausadministratoren leiten ihre Häuser, verwalten die Hausnetze
 und sind Mitglied im Administratorenrat.}
 
-\Satz{3}{Die Amtsperioden der Hausadministratoren laufen ab der Aufnahme durch
-den vorsitzenden Vorstand auf die Adminliste bis zum Amtsantritt eines neuen
-oder spätestens Ende des Wahlzeitraumes.}
+\Satz{3}{Die Amtsperioden der Hausadministratoren beginnen mit der Aufnahme
+durch den vorsitzenden Vorstand auf die Liste der derzeit tätigen Administratoren
+und enden mit Amtsantritt der neuen Hausadministratoren oder spätestens zum
+Ende des darauffolgenden Wahlzeitraumes.}
 
 \Satz{4}{Die Wahl der Hausadministratoren ist dem Vorstand anzuzeigen.  Dieser
 führt eine Liste der derzeitig tätigen Administratoren. Mit der Aufnahme in
